[metadata]
name = python-emacs
version = attr: emacs.__version__
description = Python interface to GNU Emacs.
long_description = file: README.md
long_description_content_type = text/markdown
author = Jared Lumpe
author_email = mjlumpe@gmail.com
url = https://github.com/jlumpe/python-emacs
classifiers =
	Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Emacs-Lisp
	License :: OSI Approved :: MIT License
	Development Status :: 4 - Beta
	Topic :: Text Editors :: Emacs


[options]
include_package_data = true

python_requires = >=3.6

install_requires =
	# Dependencies go here

tests_require =
	pytest

packages = find:


# Aliases for setuptools commands
[aliases]
test = pytest


# Pytest settings
[tool:pytest]

testpaths = tests


# Flake8 settings
[flake8]

# Ignore these codes:
ignore =
	# TABS ARE BETTER
	W191,
	# indentation contains mixed spaces and tabs - spaces for alignment
	E101,
	# Blank line at end of file - we require this in .editorconfig
	W391

# Exclude these paths:
exclude = docs

# Check style of doctests (not working?)
doctests = True
